# telsy

./: .gitignore  README.md  bisenetv2_model.py  convert_to_onnx.py  helper.py  main.py  pyproject.toml
configs/: config.yaml
data/cityscapes/: test_list.txt  train_list.txt  val_list.txt
