[project]
name = "telsy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.13"
dependencies = [
    "directory-tree>=1.0.0",
    "fastapi==0.115.4",
    "kaggle>=1.7.4.5",
    "lightning>=2.6.0",
    "matplotlib>=3.9.4",
    "opencv-python>=4.12.0.88",
    "pydantic==2.10.0",
    "python-multipart==0.0.12",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "uvicorn[standard]==0.32.0",
    "websockets==13.1",
]
